# jira-wiki-mcp

./: .env.example  .gitignore  CHANGELOG.md  JIRA_WIKI_MCP_가이드.md  LICENSE  README.md  jira_search.py  mcp_jira_server.py  project_version.py  pyproject.toml  wiki_search.py
.cursor/rules/: version-changelog.mdc
jira_wiki.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
