[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-wiki"
dynamic = ["version"]
description = "Jira REST CLI and MCP server with Confluence wiki search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Changelog = "CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "project_version.__version__" }

[tool.setuptools]
py-modules = [
    "project_version",
    "jira_search",
    "wiki_search",
    "mcp_jira_server",
]
